--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,12 +1,12 @@
 [alias]
 ci-check-all = "check --all-targets --all-features"
-ci-check-inx = "check --all-targets --no-default-features --features inx,stardust"
-ci-check-api = "check --all-targets --no-default-features --features api,stardust"
+ci-check-inx = "check --all-targets --no-default-features --features inx"
+ci-check-api = "check --all-targets --no-default-features --features api"
 ci-check-features = "hack check --each-feature --no-dev-deps"
 
 ci-clippy-all = "clippy --all-targets --all-features -- -D warnings"
-ci-clippy-inx = "clippy --all-targets --no-default-features --features inx,stardust -- -D warnings"
-ci-clippy-api = "clippy --all-targets --no-default-features --features api,stardust -- -D warnings"
+ci-clippy-inx = "clippy --all-targets --no-default-features --features inx -- -D warnings"
+ci-clippy-api = "clippy --all-targets --no-default-features --features api -- -D warnings"
 
 ci-doctest = "test --doc --all-features"
 ci-doc = "doc --all-features --no-deps --document-private-items"
