--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -7,6 +7,8 @@ on:
     paths:
       - "**.rs"
       - "**.toml"
+  pull_request:
+    paths:
       - ".github/workflows/coverage.yml"
       - ".github/workflows/scripts/coverage.sh"
 
