--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -48,9 +48,12 @@ jobs:
         uses: supercharge/mongodb-github-action@1.8.0
         with:
           mongodb-version: "6.0"
-          mongodb-replica-set: test-rs
           mongodb-username: root
           mongodb-password: root
+          # FIXME: Currently we cannot configure this action to use authentication together with replica sets as mentioned here: 
+          # https://github.com/supercharge/mongodb-github-action#with-authentication-mongodb---auth-flag
+          # Apparently, the solution is to write a script that sets up the user beforehand.
+          #mongodb-replica-set: test-rs
 
       - name: Run test coverage
         run: bash .github/workflows/scripts/coverage.sh
