--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -5,8 +5,12 @@ on:
     branches:
       - main
     paths:
+      - ".github/workflows/coverage.yml"
+      - ".github/workflows/scripts/coverage.sh"
       - "**.rs"
       - "**.toml"
+  pull_request:
+    paths:
       - ".github/workflows/coverage.yml"
       - ".github/workflows/scripts/coverage.sh"
 
@@ -46,10 +50,17 @@ jobs:
         uses: supercharge/mongodb-github-action@1.8.0
         with:
           mongodb-version: "6.0"
-          mongodb-replica-set: test-rs
+          mongodb-username: root
+          mongodb-password: root
+          # FIXME: Currently we cannot configure this action to use authentication together with replica sets as mentioned here: 
+          # https://github.com/supercharge/mongodb-github-action#with-authentication-mongodb---auth-flag
+          # Apparently, the solution is to write a script that sets up the user beforehand.
+          #mongodb-replica-set: test-rs
 
       - name: Run test coverage
         run: bash .github/workflows/scripts/coverage.sh
+        env:
+          MONGODB_CONN_STR: mongodb://root:root@localhost:27017
 
       - uses: coverallsapp/github-action@v1.1.2
         with:
