--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ path = "src/bin/inx-chronicle/main.rs"
 # Required
 async-trait = { version = "0.1", default-features = false }
 bytesize = { version = "1.1", default-features = false }
-clap = { version = "4.0", default-features = false, features = ["env", "derive", "std", "help", "usage", "error-context", "wrap_help"] }
+clap = { version = "4.1", default-features = false, features = ["env", "derive", "std", "help", "usage", "error-context", "wrap_help"] }
 decimal = { version = "2.1", default-features = false, features = [ "serde" ] }
 derive_more = { version = "0.99", default-features = false, features = [ "add", "add_assign", "deref", "deref_mut" ] }
 dotenvy = { version = "0.15", default-features = false }
@@ -32,7 +32,7 @@ eyre = { version = "0.6", default-features = false, features = [ "track-caller",
 futures = { version = "0.3", default-features = false }
 humantime = { version = "2.1.0", default-features = false }
 humantime-serde = { version = "1.1", default-features = false }
-iota-types = { version = "1.0.0-rc", default-features = false, features = [ "api", "block", "std" ] }
+iota-types = { version = "1.0.0-rc.4", default-features = false, features = [ "api", "block", "std" ] }
 mongodb = { version = "2.3", default-features = false, features = [ "tokio-runtime" ] }
 packable = { version = "0.7", default-features = false }
 pin-project = { version = "1.0", default-features = false }
@@ -43,13 +43,13 @@ serde_bytes = { version = "0.11", default-features = false }
 serde_json = { version = "1.0", default-features = false, features = [ "std" ] }
 thiserror = { version = "1.0", default-features = false }
 time = { version = "0.3", default-features = false, features = [ "std" ] }
-tokio = { version = "1.21", default-features = false, features = [ "macros", "rt-multi-thread", "signal" ] }
+tokio = { version = "1.24", default-features = false, features = [ "macros", "rt-multi-thread", "signal" ] }
 tokio-stream = { version = "0.1", default-features = false }
 tracing = { version = "0.1", default-features = false, features = [ "std", "attributes", "release_max_level_debug" ] }
 tracing-subscriber = { version = "0.3", default-features = false, features = [ "std", "fmt", "ansi", "smallvec", "tracing-log", "local-time", "env-filter" ] }
 uint = { version = "0.9", default-features = false }
 url = { version = "2.3", default-features = false }
-uuid = { version = "1.1", default-features = false, features = [ "v4" ] }
+uuid = { version = "1.2", default-features = false, features = [ "v4" ] }
 
 # Optional
 chrono = { version = "0.4", default-features = false, features = [ "std" ], optional = true }
@@ -71,14 +71,14 @@ tower-http = { version = "0.3", default-features = false, features = [ "cors", "
 zeroize = { version = "1.5", default-features = false, features = [ "std" ], optional = true }
 
 # INX
-inx = { version = "1.0.0-beta", default-features = false, optional = true }
+inx = { version = "1.0.0-beta.8", default-features = false, optional = true }
 tonic = { version = "0.8", default-features = false, optional = true }
 
 # PoI
 iota-crypto = { version = "0.15", default-features = false, features = [ "blake2b" ], optional = true }
 
 [dev-dependencies]
-iota-types = { version = "1.0.0-rc", default-features = false, features = [ "api", "block", "std", "rand" ] }
+iota-types = { version = "1.0.0-rc.4", default-features = false, features = [ "api", "block", "std", "rand" ] }
 rand = { version = "0.8", default-features = false, features = [ "std" ] }
 
 [features]
