--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ eyre = { version = "0.6", default-features = false, features = [ "track-caller",
 futures = { version = "0.3", default-features = false }
 humantime = { version = "2.1.0", default-features = false }
 humantime-serde = { version = "1.1", default-features = false }
+iota-crypto = { version = "0.15", default-features = false, features = [ "blake2b" ]}
 iota-types = { version = "1.0.0-rc.4", default-features = false, features = [ "api", "block", "std" ] }
 mongodb = { version = "2.3", default-features = false, features = [ "tokio-runtime" ] }
 packable = { version = "0.7", default-features = false }
@@ -74,9 +75,6 @@ zeroize = { version = "1.5", default-features = false, features = [ "std" ], opt
 inx = { version = "1.0.0-beta.8", default-features = false, optional = true }
 tonic = { version = "0.8", default-features = false, optional = true }
 
-# PoI
-iota-crypto = { version = "0.15", default-features = false, features = [ "blake2b" ], optional = true }
-
 [dev-dependencies]
 iota-types = { version = "1.0.0-rc.4", default-features = false, features = [ "api", "block", "std", "rand" ] }
 rand = { version = "0.8", default-features = false, features = [ "std" ] }
@@ -118,7 +116,6 @@ metrics = [
 ]
 poi = [
     "api",
-    "dep:iota-crypto",
 ]
 rand = [
     "iota-types/rand",
