--- a/Cargo.toml
+++ b/Cargo.toml
@@ -129,3 +129,7 @@ inherits = "release"
 codegen-units = 1
 lto = true
 strip = "symbols"
+
+[[bin]]
+name = "1-0-0-beta-31"
+path = "src/migrations/1.0.0-beta.31.rs"
