--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,12 +26,13 @@ async-trait = { version = "0.1", default-features = false }
 bytesize = { version = "1.1", default-features = false }
 clap = { version = "4.1", default-features = false, features = ["env", "derive", "std", "help", "usage", "error-context", "wrap_help"] }
 decimal = { version = "2.1", default-features = false, features = [ "serde" ] }
-derive_more = { version = "0.99", default-features = false, features = [ "add", "add_assign", "deref", "deref_mut" ] }
+derive_more = { version = "0.99", default-features = false, features = [ "add", "add_assign", "deref", "deref_mut", "sum" ] }
 dotenvy = { version = "0.15", default-features = false }
 eyre = { version = "0.6", default-features = false, features = [ "track-caller", "auto-install" ] }
 futures = { version = "0.3", default-features = false }
 humantime = { version = "2.1.0", default-features = false }
 humantime-serde = { version = "1.1", default-features = false }
+iota-crypto = { version = "0.15", default-features = false, features = [ "blake2b" ] }
 iota-types = { version = "1.0.0-rc.4", default-features = false, features = [ "api", "block", "std" ] }
 mongodb = { version = "2.3", default-features = false, features = [ "tokio-runtime" ] }
 packable = { version = "0.7", default-features = false }
@@ -74,9 +75,6 @@ zeroize = { version = "1.5", default-features = false, features = [ "std" ], opt
 inx = { version = "1.0.0-beta.8", default-features = false, optional = true }
 tonic = { version = "0.8", default-features = false, optional = true }
 
-# PoI
-iota-crypto = { version = "0.15", default-features = false, features = [ "blake2b" ], optional = true }
-
 [dev-dependencies]
 iota-types = { version = "1.0.0-rc.4", default-features = false, features = [ "api", "block", "std", "rand" ] }
 rand = { version = "0.8", default-features = false, features = [ "std" ] }
@@ -118,7 +116,6 @@ metrics = [
 ]
 poi = [
     "api",
-    "dep:iota-crypto",
 ]
 rand = [
     "iota-types/rand",
