--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,6 +78,7 @@ tonic = { version = "0.8", default-features = false, optional = true }
 [dev-dependencies]
 iota-types = { version = "1.0.0-rc.5", default-features = false, features = [ "api", "block", "std", "rand" ] }
 rand = { version = "0.8", default-features = false, features = [ "std" ] }
+ron = { version = "0.8", default-features = false }
 
 [features]
 default = [
