--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,9 +76,11 @@ inx = { version = "1.0.0-beta.8", default-features = false, optional = true }
 tonic = { version = "0.8", default-features = false, optional = true }
 
 [dev-dependencies]
+bincode = { version = "1.3", default-features = false }
 iota-types = { version = "1.0.0-rc.5", default-features = false, features = [ "api", "block", "std", "rand" ] }
 rand = { version = "0.8", default-features = false, features = [ "std" ] }
 ron = { version = "0.8", default-features = false }
+yazi = { version = "0.1", default-features = false }
 
 [features]
 default = [
