add dash to name

--- a/docker/assets/grafana/datasources/influx_analytics_ds.yml
+++ b/docker/assets/grafana/datasources/influx_analytics_ds.yml
@@ -1,11 +1,11 @@
 apiVersion: 1
 
 deleteDatasources:
-  - name: InfluxDB Analytics
+  - name: InfluxDB-Analytics
     orgId: 1
 
 datasources:
-  - name: InfluxDB Analytics
+  - name: InfluxDB-Analytics
     type: influxdb
     access: proxy
     database: chronicle_analytics
