--- a/docker/assets/grafana/datasources/influx_metrics_ds.yml
+++ b/docker/assets/grafana/datasources/influx_metrics_ds.yml
@@ -1,11 +1,11 @@
 apiVersion: 1
 
 deleteDatasources:
-  - name: InfluxDB Metrics
+  - name: InfluxDB-Metrics
     orgId: 1
 
 datasources:
-  - name: InfluxDB Metrics
+  - name: InfluxDB-Metrics
     type: influxdb
     access: proxy
     database: chronicle_metrics
