--- a/docker/assets/grafana/datasources/influx_analytics_ds.yml
+++ b/docker/assets/grafana/datasources/influx_analytics_ds.yml
@@ -10,9 +10,11 @@ datasources:
     access: proxy
     database: chronicle_analytics
     user: root
+    password: password
     url: http://influx:8086
     jsonData:
       httpMode: GET
     secureJsonData:
       password: password
     uid: PE5723DBC504634E6
+    editable: true
