--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,10 +32,10 @@ eyre = { version = "0.6", default-features = false, features = [ "track-caller",
 futures = { version = "0.3", default-features = false }
 humantime = { version = "2.1.0", default-features = false }
 humantime-serde = { version = "1.1", default-features = false }
-iota-crypto = { version = "0.23", default-features = false, features = [ "blake2b" ] }
-iota-types = { version = "1.0.0-rc.7", default-features = false, features = [ "api", "block", "std" ] }
+iota-crypto = { version = "0.23", default-features = false, features = [ "blake2b", "ed25519", "slip10", "bip39-en" ] }
+iota-sdk = { version = "1.0", default-features = false, features = [ "std", "serde" ] }
 mongodb = { version = "2.4", default-features = false, features = [ "tokio-runtime" ] }
-packable = { version = "0.7", default-features = false }
+packable = { version = "0.8", default-features = false }
 pin-project = { version = "1.0", default-features = false }
 prefix-hex = { version = "0.7.0", default-features = false, features = [ "primitive-types", "std" ] }
 primitive-types = { version = "0.12", default-features = false }
@@ -59,8 +59,7 @@ influxdb = { version = "0.5", default-features = false, features = [ "use-serde"
 # API
 auth-helper = { version = "0.3", default-features = false, optional = true }
 axum = { version = "0.5", default-features = false, features = [ "http1", "json", "query", "original-uri", "headers" ], optional = true }
-ed25519 = { version = "2.0", default-features = false, features = [ "alloc", "pkcs8", "pem" ], optional = true }
-ed25519-dalek = { version = "2.0", default-features = false, features = [ "std", "fast", "zeroize" ], optional = true }
+ed25519-zebra = { version = "4.0", default-features = false, features = [ "std", "pkcs8", "pem" ], optional = true }
 hex = { version = "0.4", default-features = false, optional = true }
 hyper = { version = "0.14", default-features = false, features = [ "server", "tcp", "stream" ], optional = true }
 rand = { version = "0.8", default-features = false, features = [ "std" ], optional = true }
@@ -77,7 +76,7 @@ tonic = { version = "0.8", default-features = false, optional = true }
 
 [dev-dependencies]
 bincode = { version = "1.3", default-features = false }
-iota-types = { version = "1.0.0-rc.7", default-features = false, features = [ "api", "block", "std", "rand" ] }
+iota-sdk = { version = "1.0", default-features = false, features = [ "std", "serde", "rand" ] }
 rand = { version = "0.8", default-features = false, features = [ "std" ] }
 ron = { version = "0.8", default-features = false }
 yazi = { version = "0.1", default-features = false }
@@ -96,8 +95,7 @@ analytics = [
 api = [
     "dep:auth-helper",
     "dep:axum",
-    "dep:ed25519",
-    "dep:ed25519-dalek",
+    "dep:ed25519-zebra",
     "dep:hex",
     "derive_more/from",
     "dep:hyper",
@@ -124,7 +122,7 @@ poi = [
     "api",
 ]
 rand = [
-    "iota-types/rand",
+    "iota-sdk/rand",
 ]
 
 [profile.production]
