--- a/.env.template
+++ b/.env.template
@@ -4,4 +4,4 @@ INFLUXDB_USERNAME=root
 INFLUXDB_PASSWORD=password
 JWT_PASSWORD=password
 JWT_SALT=saltines
-HORNET_CONFIG_PATH="path to hornet config JSON file"
+HORNET_CONFIG_PATH=config_testnet.json
