--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,6 +78,7 @@ tonic = { version = "0.8", default-features = false, optional = true }
 [dev-dependencies]
 bincode = { version = "1.3", default-features = false }
 iota-sdk = { version = "1.1", default-features = false, features = [ "std", "serde", "rand" ] }
+pretty_assertions = { version = "1.4", default-features = false, features = [ "std" ] }
 rand = { version = "0.8", default-features = false, features = [ "std" ] }
 ron = { version = "0.8", default-features = false }
 yazi = { version = "0.1", default-features = false }
