--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,8 +32,8 @@ eyre = { version = "0.6", default-features = false, features = [ "track-caller",
 futures = { version = "0.3", default-features = false }
 humantime = { version = "2.1.0", default-features = false }
 humantime-serde = { version = "1.1", default-features = false }
-iota-crypto = { version = "0.23", default-features = false, features = [ "blake2b", "ed25519", "slip10", "bip39-en" ] }
-iota-sdk = { version = "1.1", default-features = false, features = [ "std", "serde" ] }
+iota-crypto = { version = "0.23", default-features = false, features = [ "blake2b", "ed25519", "slip10", "bip39-en", "random", "zeroize" ] }
+iota-sdk = { git = "https://github.com/iotaledger/iota-sdk", branch = "2.0", default-features = false, features = [ "std", "serde" ] }
 mongodb = { version = "2.4", default-features = false, features = [ "tokio-runtime" ] }
 packable = { version = "0.8", default-features = false }
 pin-project = { version = "1.0", default-features = false }
@@ -59,7 +59,6 @@ influxdb = { version = "0.7", default-features = false, features = [ "use-serde"
 # API
 auth-helper = { version = "0.3", default-features = false, optional = true }
 axum = { version = "0.5", default-features = false, features = [ "http1", "json", "query", "original-uri", "headers" ], optional = true }
-ed25519 = { version = "2.2", default-features = false, features = [ "zeroize" ] } # This is here simply to force this feature
 ed25519-zebra = { version = "4.0", default-features = false, features = [ "std", "pkcs8", "pem" ], optional = true }
 hex = { version = "0.4", default-features = false, optional = true }
 hyper = { version = "0.14", default-features = false, features = [ "server", "tcp", "stream" ], optional = true }
@@ -72,12 +71,12 @@ tower-http = { version = "0.4", default-features = false, features = [ "cors", "
 zeroize = { version = "1.5", default-features = false, features = [ "std", "zeroize_derive" ], optional = true }
 
 # INX
-inx = { version = "1.0.0-beta.8", default-features = false, optional = true }
-tonic = { version = "0.8", default-features = false, optional = true }
+inx = { git = "https://github.com/iotaledger/inx", default-features = false, optional = true }
+tonic = { version = "0.10", default-features = false, optional = true }
 
 [dev-dependencies]
 bincode = { version = "1.3", default-features = false }
-iota-sdk = { version = "1.1", default-features = false, features = [ "std", "serde", "rand" ] }
+iota-sdk = { git = "https://github.com/iotaledger/iota-sdk", branch = "2.0", default-features = false, features = [ "std", "serde", "rand" ] }
 pretty_assertions = { version = "1.4", default-features = false, features = [ "std" ] }
 rand = { version = "0.8", default-features = false, features = [ "std" ] }
 ron = { version = "0.8", default-features = false }
