clippy, docs, udeps

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "chronicle"
-version = "1.0.0-rc.2"
+version = "2.0.0"
 authors = ["IOTA Stiftung"]
 edition = "2021"
 description = "IOTA permanode implemented as an IOTA Node Extension (INX)."
@@ -25,11 +25,11 @@ path = "src/bin/inx-chronicle/main.rs"
 async-trait = { version = "0.1", default-features = false }
 bytesize = { version = "1.1", default-features = false }
 clap = { version = "4.1", default-features = false, features = ["env", "derive", "std", "help", "usage", "error-context", "wrap_help"] }
-decimal = { version = "2.1", default-features = false, features = [ "serde" ] }
 derive_more = { version = "0.99", default-features = false, features = [ "add", "add_assign", "deref", "deref_mut", "sum" ] }
 dotenvy = { version = "0.15", default-features = false }
 eyre = { version = "0.6", default-features = false, features = [ "track-caller", "auto-install" ] }
 futures = { version = "0.3", default-features = false }
+hex = { version = "0.4", default-features = false}
 humantime = { version = "2.1.0", default-features = false }
 humantime-serde = { version = "1.1", default-features = false }
 iota-crypto = { version = "0.23", default-features = false, features = [ "blake2b", "ed25519", "slip10", "bip39-en", "random", "zeroize" ] }
@@ -60,7 +60,6 @@ influxdb = { version = "0.7", default-features = false, features = [ "use-serde"
 auth-helper = { version = "0.3", default-features = false, optional = true }
 axum = { version = "0.5", default-features = false, features = [ "http1", "json", "query", "original-uri", "headers" ], optional = true }
 ed25519-zebra = { version = "4.0", default-features = false, features = [ "std", "pkcs8", "pem" ], optional = true }
-hex = { version = "0.4", default-features = false, optional = true }
 hyper = { version = "0.14", default-features = false, features = [ "server", "tcp", "stream" ], optional = true }
 rand = { version = "0.8", default-features = false, features = [ "std" ], optional = true }
 regex = { version = "1.7", default-features = false, features = [ "std" ], optional = true }
@@ -97,7 +96,6 @@ api = [
     "dep:auth-helper",
     "dep:axum",
     "dep:ed25519-zebra",
-    "dep:hex",
     "derive_more/from",
     "dep:hyper",
     "dep:rand",
