--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,7 +58,7 @@ influxdb = { version = "0.7", default-features = false, features = [ "use-serde"
 
 # API
 auth-helper = { version = "0.3", default-features = false, optional = true }
-axum = { version = "0.5", default-features = false, features = [ "http1", "json", "query", "original-uri", "headers" ], optional = true }
+axum = { version = "0.6", default-features = false, features = [ "http1", "json", "query", "original-uri", "headers", "tokio", "macros" ], optional = true }
 ed25519-zebra = { version = "4.0", default-features = false, features = [ "std", "pkcs8", "pem" ], optional = true }
 hyper = { version = "0.14", default-features = false, features = [ "server", "tcp", "stream" ], optional = true }
 rand = { version = "0.8", default-features = false, features = [ "std" ], optional = true }
