--- a/documentation/api/api-explorer.yml
+++ b/documentation/api/api-explorer.yml
@@ -275,13 +275,13 @@ components:
         totalBalance:
           type: string
           description: >-
-            The total value held in unspent outputs owned by the given address 
-            (includes funds held in storage deposit).
-        sigLockedBalance:
+            The total value held in unspent outputs that is unlockable by the given address or currently timelocked.
+            Does not include funds held in storage deposit.
+        availableBalance:
           type: string
           description: >-
-            The sum of value held in unspent outputs owned by the given address 
-            that are signature locked ("trivially unlockable").
+            The total value held in unspent outputs that is immediately unlockable at ledgerIndex by the given address.
+            Does not include funds held in storage deposit.
         ledgerIndex:
           type: integer
           description: The ledger index for which the balance calculation was performed.
@@ -585,7 +585,7 @@ components:
     balance-example:
       value:
         totalBalance: 100000
-        sigLockedBalance: 99900
+        availableBalance: 99900
         ledgerIndex: 500000
     ledger-updates-address-example:
       value:
