--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,15 +58,17 @@ influxdb = { version = "0.7", default-features = false, features = [ "use-serde"
 
 # API
 auth-helper = { version = "0.3", default-features = false, optional = true }
-axum = { version = "0.6", default-features = false, features = [ "http1", "json", "query", "original-uri", "headers", "tokio", "macros" ], optional = true }
+axum = { version = "0.7.4", default-features = false, features = [ "http1", "json", "query", "original-uri", "tokio", "macros" ], optional = true }
+axum-extra = { version = "*", default-features = false, features = [ "typed-header" ] }
 ed25519-zebra = { version = "4.0", default-features = false, features = [ "std", "pkcs8", "pem" ], optional = true }
-hyper = { version = "0.14", default-features = false, features = [ "server", "tcp", "stream" ], optional = true }
+hyper = { version = "1.1.0", default-features = false, features = [ "server" ], optional = true }
+hyper-util = { version = "0.1.3", default-features = false }
 rand = { version = "0.8", default-features = false, features = [ "std" ], optional = true }
 regex = { version = "1.7", default-features = false, features = [ "std" ], optional = true }
 rust-argon2 = { version = "2.0.0", default-features = false, optional = true }
 serde_urlencoded = { version = "0.7", default-features = false, optional = true }
 tower = { version = "0.4", default-features = false, optional = true }
-tower-http = { version = "0.4", default-features = false, features = [ "cors", "catch-panic", "trace" ], optional = true }
+tower-http = { version = "0.5.1", default-features = false, features = [ "cors", "catch-panic", "trace" ], optional = true }
 zeroize = { version = "1.5", default-features = false, features = [ "std", "zeroize_derive" ], optional = true }
 
 # INX
